--- a/Azla2/src/assets/main.css
+++ b/Azla2/src/assets/main.css
@@ -1,16 +1,20 @@
-@import './base.css';
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
-  display: flex;
-  flex-direction: column;
-
+* {
+  font-family: 'Oswald';
+  
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-#app > .main-page {
-  flex: 1;
-}
+html{
 
+  height: 100vh;
+}
+body{
+
+  height: 100%;
+}
+#app{
+
+  height: 100%;
+}
